# telemetry-framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  telemetry.csv
benchmarks/: TelemetryBenchmark.cpp
include/: CsvExporter.hpp  SensorSimulator.hpp  TelemetryAlert.hpp  TelemetryFilter.hpp  TelemetryMessage.hpp  TelemetryProcessor.hpp  TelemetryQueue.hpp
src/: CsvExporter.cpp  SensorSimulator.cpp  TelemetryAlert.cpp  TelemetryFilter.cpp  TelemetryMessage.cpp  TelemetryProcessor.cpp  TelemetryQueue.cpp  main.cpp
tests/: TelemetryTests.cpp
